---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2023-??-??

  Features:
    - Team color support

  Changes:
    - Fixed entity from sunker-colony to sunken-colony.
    - Change decal's render_layer, so they are not hidden under Alien Biomes
    - AnimationDB code clean up

  Graphics:
    - Various changes on entity resolution, some animations utilize file splits.


---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2023-08-02

  Bugfixes:
    - Fix sound class

---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2023-07-26

  Features:
    - Added SC Remaster Graphics Asset Pack
    - Provide re-usable integration for other mods.
    - Sound class, allows easy integration of Protoss sounds
    - AnimationDB class, allows easy integration of Protoss animations
    - Detailed tutorials will be provided on github later.