@@ -23,14 +23,14 @@ return {
     small_air = {
         explosion = {
             glow = {
-                filename = "__erm_toss_hd_assets__/graphics/entity/units/air-death/large-air-death.png",
+                filename = "__erm_toss_hd_assets__/graphics/entity/units/air-death/small-air-death.png",
                 width = 899,
                 height = 1057,
                 frame_count = 9,
                 direction_count = 1,
                 axially_symmetrical = false,
                 scale = 0.5,
-                animation_speed = 0.2,
+                animation_speed = 0.4,
             }
         }
     },
@@ -48,8 +48,60 @@ return {
             }
         }
     },
-    extra_large_air_death = {
-
+    extra_large_air = {
+        explosion = {
+            glow = {
+                stripes  =
+                {
+                    {
+                        filename = "__erm_toss_exp__/graphics/entity/units/air-death/extra-large-air-death-0.png",
+                        width_in_frames = 2,
+                        height_in_frames = 1
+                    },
+                    {
+                        filename = "__erm_toss_exp__/graphics/entity/units/air-death/extra-large-air-death-1.png",
+                        width_in_frames = 2,
+                        height_in_frames = 1
+                    },
+                    {
+                        filename = "__erm_toss_exp__/graphics/entity/units/air-death/extra-large-air-death-2.png",
+                        width_in_frames = 2,
+                        height_in_frames = 1
+                    },
+                    {
+                        filename = "__erm_toss_exp__/graphics/entity/units/air-death/extra-large-air-death-3.png",
+                        width_in_frames = 2,
+                        height_in_frames = 1
+                    },
+                    {
+                        filename = "__erm_toss_exp__/graphics/entity/units/air-death/extra-large-air-death-4.png",
+                        width_in_frames = 2,
+                        height_in_frames = 1
+                    },
+                    {
+                        filename = "__erm_toss_exp__/graphics/entity/units/air-death/extra-large-air-death-5.png",
+                        width_in_frames = 2,
+                        height_in_frames = 1
+                    },
+                    {
+                        filename = "__erm_toss_exp__/graphics/entity/units/air-death/extra-large-air-death-6.png",
+                        width_in_frames = 2,
+                        height_in_frames = 1
+                    },
+                    {
+                        filename = "__erm_toss_exp__/graphics/entity/units/air-death/extra-large-air-death-7.png",
+                        width_in_frames = 2,
+                        height_in_frames = 1
+                    }
+                },
+                width = 1849,
+                height = 1935,
+                frame_count = 16,
+                animation_speed = 0.4,
+                direction_count = 1,
+                scale = 0.5,
+            }
+        }
     },
     zealot = {
         explosion = {
