@@ -15,7 +15,7 @@ return {
             axially_symmetrical = false,
             direction_count = 16,
             scale = 0.375,
-            animation_speed = 0.5,
+            animation_speed = 0.4,
         },
         shadow = {
             shift = { 6, 0 }
@@ -28,7 +28,7 @@ return {
             axially_symmetrical = false,
             direction_count = 16,
             scale = 0.375,
-            animation_speed = 0.5,
+            animation_speed = 0.4,
             draw_as_glow = true,
             blend_mode = "additive",
             tint = { r = 110, g = 210, b = 255, a = 255 },
@@ -42,7 +42,7 @@ return {
             axially_symmetrical = false,
             direction_count = 16,
             scale = 0.375,
-            animation_speed = 0.5,
+            animation_speed = 0.4,
         }
     }
 }
