@@ -21,7 +21,7 @@ return {
             axially_symmetrical = false,
             direction_count = 16,
             scale = 0.325,
-            animation_speed = 0.5,
+            animation_speed = 0.4,
         },
         shadow = {
             shift = { 4, 0 }
@@ -34,7 +34,7 @@ return {
             axially_symmetrical = false,
             direction_count = 16,
             scale = 0.325,
-            animation_speed = 0.5,
+            animation_speed = 0.4,
             blend_mode = "additive",
             --    shift = util.by_pixel(-4, -4),
             tint = { r = 110, g = 210, b = 255, a = 255 }
@@ -48,7 +48,7 @@ return {
             axially_symmetrical = false,
             direction_count = 16,
             scale = 0.325,
-            animation_speed = 1,
+            animation_speed = 0.4,
             draw_as_glow = true,
         },
     },
@@ -61,7 +61,7 @@ return {
             axially_symmetrical = false,
             direction_count = 16,
             scale = 0.325,
-            animation_speed = 0.5,
+            animation_speed = 0.4,
         },
         shadow = {
             shift = { 4, 0 }
@@ -75,7 +75,7 @@ return {
             axially_symmetrical = false,
             direction_count = 16,
             scale = 0.325,
-            animation_speed = 0.5,
+            animation_speed = 0.4,
             blend_mode = "additive",
             tint = { r = 110, g = 210, b = 255, a = 255 },
         },
@@ -88,7 +88,7 @@ return {
             axially_symmetrical = false,
             direction_count = 16,
             scale = 0.325,
-            animation_speed = 1,
+            animation_speed = 0.4,
             draw_as_glow = true,
         },
     }
