@@ -21,7 +21,7 @@ return {
             repeat_count = 2,
             direction_count = 16,
             scale = 0.325 * 1.25,
-            animation_speed = 0.5,
+            animation_speed = 0.4,
             draw_as_glow = true
         },
         glow = {
@@ -39,7 +39,7 @@ return {
             repeat_count = 5,
             direction_count = 16,
             scale = 0.325,
-            animation_speed = 0.5,
+            animation_speed = 0.4,
             draw_as_glow = true,
             shift = util.by_pixel(-3, 0)
         },
@@ -59,7 +59,7 @@ return {
             axially_symmetrical = false,
             direction_count = 16,
             scale = 0.325 * 1.25,
-            animation_speed = 1,
+            animation_speed = 0.4,
             draw_as_glow = true
         },
         team = {
@@ -78,7 +78,7 @@ return {
             axially_symmetrical = false,
             direction_count = 16,
             scale = 0.325 * 1.25,
-            animation_speed = 1,
+            animation_speed = 0.4,
             draw_as_glow = true
         }
     }
