@@ -15,7 +15,7 @@ return {
            axially_symmetrical = false,
            direction_count = 16,
            scale = 0.325,
-           animation_speed = 0.5,
+           animation_speed = 0.4,
        },
        shadow = {
            shift = { 4, 0 }
@@ -28,7 +28,7 @@ return {
            axially_symmetrical = false,
            direction_count = 16,
            scale = 0.325,
-           animation_speed = 0.5,
+           animation_speed = 0.4,
            blend_mode = "additive",
        --    shift = util.by_pixel(-4, -4),
            tint = { r = 110, g = 210, b = 255, a = 255 }
@@ -42,7 +42,7 @@ return {
            axially_symmetrical = false,
            direction_count = 16,
            scale = 0.325,
-           animation_speed = 0.5,
+           animation_speed = 0.4,
        }
    }
 }
