@@ -26,7 +26,7 @@ return {
             frame_count = 12,
             direction_count = 16,
             scale = 0.325,
-            animation_speed = 0.5,
+            animation_speed = 0.4,
         },
         shadow = {
             shift = { 0.2, 0 }
@@ -45,7 +45,7 @@ return {
             frame_count = 12,
             direction_count = 16,
             scale = 0.325,
-            animation_speed = 0.5,
+            animation_speed = 0.4,
         }
     },
     attack = {
@@ -63,7 +63,7 @@ return {
             frame_count = 5,
             direction_count = 16,
             scale = 0.325,
-            animation_speed = 0.5,
+            animation_speed = 0.4,
         },
         shadow = {
             shift = { 0.2, 0 }
@@ -82,7 +82,7 @@ return {
             frame_count = 5,
             direction_count = 16,
             scale = 0.325,
-            animation_speed = 0.5,
+            animation_speed = 0.4,
         }
     },
 }
